add build command for front-end

--- a/package.json
+++ b/package.json
@@ -3,6 +3,6 @@
   "version": "1.0.0",
   "workspaces": ["client", "server"],
   "scripts": {
-    "build:front": "cd client && npm run build"
+    "build:front": "cd client && npm i && npm run build"
   }
 }
